<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/more"
        android:icon="@drawable/moreicon"
        android:title=""
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/home"
                android:title="@string/Home"
                app:showAsAction="always" />
            <item
                android:id="@+id/file"
                android:title="@string/File"
                app:showAsAction="always" />

            <item
                android:id="@+id/image"
                android:title="@string/Image"
                app:showAsAction="always" />

            <item
                android:id="@+id/video"
                android:title="@string/Video"
                app:showAsAction="always" />
            <item
                android:id="@+id/logout"
                android:title="@string/Logout"
                app:showAsAction="always" />

        </menu>

    </item>
</menu>