<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="273dp"
        android:background="@drawable/blue_bg">

        <ImageView
            android:layout_width="77dp"
            android:layout_height="77dp"
            android:layout_centerInParent="true"
            android:src="@drawable/dblogo" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:background="@drawable/borderblue">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/nameuser1"
            android:hint="@string/Name"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/nameuser1"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:src="@drawable/user" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/borderblue">

        <EditText
            android:id="@+id/newusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/newicon_user"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/newicon_user"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:src="@drawable/mail" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/borderblue">

        <EditText
            android:id="@+id/newpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/newicon_pass"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/newicon_pass"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:src="@drawable/password" />



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/borderblue">

        <EditText
            android:id="@+id/cfpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/cficon_pass"
            android:hint="@string/confirmpassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16dp" />

    <ImageView
        android:id="@+id/cficon_pass"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="17dp"
        android:src="@drawable/password" />
    </RelativeLayout>






    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/newbutton"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:background="@drawable/allblue"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:gravity="center"
        android:text="@string/register" />



</LinearLayout>